added 404.html page.

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <div class="row">
       <div class="one-half column">
         <p align="justify"><strong>THE SHORT:</strong><br>
-          Matt Graham is your average everyday Australian late thirties human looking to make a change in his career to
+          Matt Graham is your average everyday Australian thirty something male looking to make a change in his career to
           move towards a profession in Full Stack Web development.
         </p>
         <hr>
