--- a/index.html
+++ b/index.html
@@ -31,7 +31,8 @@
     <div class="row">
       <div class="one-half column">
         <p align="justify"><strong>THE SHORT:</strong><br>
-          Matt Graham is your average everyday Australian thirty something male looking to make a change in his career to
+          Matt Graham is your average everyday Australian thirty something male looking to make a change in his career
+          to
           move towards a profession in Full Stack Web development.
         </p>
         <hr>
@@ -123,27 +124,34 @@
                 <p>This is where my latest article for <a href="https://medium.com/@mattgrah_am" target="_blank">Medium</a>
                   will display. I will be writing my thoughts and ideas on
                   this platform soon.</p>
-                </td>
-              </tr>
-            </table>
+              </td>
+            </tr>
+          </table>
       </div>
     </div>
     <hr>
-    <div class="row">
-      <div class="eleven columns">
-        <div class="social">
-          <script src="js/email.js"></script>
-          <a href="https://twitter.com/mattgrah_am" target="_blank" class="fab fa-twitter social"></a>
-          <a href="https://www.instagram.com/mattgrah.am/" target="_blank" class="fab fa-instagram social"></a>
-          <a href="https://github.com/mattgrah-am" target="_blank" class="fab fa-github social"></a>
-          <a href="https://www.linkedin.com/in/matt-graham-5b598655/" target="_blank" class="fab fa-linkedin-in social"></a>
-        </div>
-        <p id="footer">Built using <a href="https://code.visualstudio.com/" target="_blank">VSCODE</a>, <a href="http://getskeleton.com"
-            target="_blank">Skeleton.css</a>, & <a href="http://fontawesome.com" target="_blank">Awesome Font</a>.</p>
-      </div>
-      <div class="one column" id="footer-logo">
-        <p id="footer-logo"><a href="index.html"><br>MA<br>GR<br></a></p>
-      </div>
+    <table width="100%">
+      <tr>
+        <td>
+          <div class="social">
+            <script src="js/email.js"></script>
+            <a href="https://twitter.com/mattgrah_am" target="_blank" class="fab fa-twitter social"></a>
+            <a href="https://www.instagram.com/mattgrah.am/" target="_blank" class="fab fa-instagram social"></a>
+            <a href="https://github.com/mattgrah-am" target="_blank" class="fab fa-github social"></a>
+            <a href="https://www.linkedin.com/in/matt-graham-5b598655/" target="_blank" class="fab fa-linkedin-in social"></a>
+          </div>
+          <p id="footer">Built using <a href="https://code.visualstudio.com/" target="_blank">VSCODE</a>, <a href="http://getskeleton.com"
+              target="_blank">Skeleton.css</a>, & <a href="http://fontawesome.com" target="_blank">Awesome Font</a>.</p>
+        </td>
+        <td valign="top">
+          <p align="right" id="footer-logo"><a href="index.html"><br>MA<br>GR<br></a></p>
+        </td>
+      </tr>
+    </table>
+
+
+  </div>
+  
 </body>
 
 </html>
